fixed overflow

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -60,6 +60,7 @@ body {
     font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .bodyDark {
